apps/trilium/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trilium
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
  labels:
    app.kubernetes.io/name: trilium
    pod-security.kubernetes.io/enforce: restricted
