apps/trilium/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trilium
  namespace: trilium
  labels:
    app.kubernetes.io/name: trilium
spec:
  selector:
    app.kubernetes.io/name: trilium
  ports:
    - name: http
      port: 8080
      targetPort: http
