apps/trilium/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trilium
  namespace: trilium
  labels:
    app.kubernetes.io/name: trilium
  annotations:
    external-dns.alpha.kubernetes.io/target: traefik.kennyandries.com
spec:
  ingressClassName: traefik-system-traefik
  rules:
    - host: trilium.kennyandries.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trilium
                port:
                  name: http
